argocd/sys_utils_project/monitoring/vmalert_test/vmalert-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    app.kubernetes.io/name: vmalert
  name: vmalert-service
spec:
  ports:
  - name: http
    port: 8880
    targetPort: http
    protocol: TCP
  selector:
    app: vmalert
