argocd/sys_utils_project/monitoring/vmalert_test/vmaler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalert
  namespace: monitoring
spec:
  rules:
  - host: mon.home.local
    http:
      paths:
        - path: /vmalert
          pathType: Prefix
          backend:
            service:
              name: vmalert-service
              port:
                number: 8880
